# TripleAgent

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  Untitled.ipynb  appveyor.yml  individual_player.ipynb  pylintrc  setup.cfg  setup.py  vulture_whitelist.py
casters/: action_test_all.html  action_test_all.json  action_test_all.txt  action_test_scl5.html  action_test_scl5.json  action_test_scl5.txt  spy_selection_all.html  spy_selection_all.json  spy_selection_all.txt  spy_selection_scl5.json  spy_selection_scl5.txt
docs/: index.html  installation_instructions.txt  style.css  title.txt
event_reports/: Summer Cup 2019.ipynb
examples/: Untitled.ipynb  action_tests.ipynb  character_selection.ipynb  character_selection_notebook.py  conversations.ipynb  custom_filter_example.ipynb  custom_query_example.ipynb  division_stats.ipynb  example_json_output.ipynb  individual_player.ipynb  mission_bug.ipynb  mission_choices_and_completions.ipynb  mission_contact.ipynb  mission_fingerprint.ipynb  mission_microfilm.ipynb  mission_progress.ipynb  mission_seduce.ipynb  run_all_notebooks.py  scl5_games.ipynb  scl5_placement_players.ipynb  scl5_sets.ipynb  time_adds.ipynb
for_casters/: action_tests.ipynb  character_selections.ipynb  example_json_output.ipynb
json_games/: --3mWqGXRBWewaPjAhwo2w.json  --w4frfFSiir3wmusPzYnQ.json  -1F_upBGTdqYfeigblTt3A.json  -1ZIz7KvQ1K6HGPLjBizKw.json  -1cheTnmTG-rhuFlTf-yDQ.json  -23SOVLqRFmQgLwcOzJ3hA.json  -3uJ6JdsSfKZ1tplMEbAig.json  -48pxc4eSK696XMihnfK6A.json  -4XA52YgQLCV-dogEayZ8A.json  -4k0_uMjQSiG_DaCIOUypw.json  (+4051 more)
(+56636 files in other folders)
