[metadata]
description-file = README.rst

[aliases]
test=pytest

[tool:pytest]
markers =
    quick
    tryfirst
    parsing
    plotting
    matplotlib

[mutmut]
paths_to_mutate=./triple_agent/classes,./triple_agent/constants,./triple_agent/organization,./triple_agent/parsing,./triple_agent/reports
runner=python -m pytest ./triple_agent -x --assert=plain
